--- a/app/index.html
+++ b/app/index.html
@@ -85,8 +85,8 @@
 
         <script src="scripts/services/form-service.js"></script>
 
-        <script src="scripts/directives/form-directive.js"></script>
-        <script src="scripts/directives/field-directive.js"></script>
+        // <script src="scripts/directives/form-directive.js"></script>
+        // <script src="scripts/directives/field-directive.js"></script>
 
         <script src="lib/ui-bootstrap-tpls-0.4.0.min.js"></script>
         <!-- endbuild -->
